<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/menu_1"
    tools:context=".Recipes" >

    <Button
        android:id="@+id/buttonSpice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:onClick="onClickSpice"
        android:text="@string/spice" />

    <Button
        android:id="@+id/buttonDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonPop"
        android:layout_alignRight="@+id/buttonPop"
        android:layout_below="@+id/buttonSpice"
        android:layout_marginTop="104dp"
        android:onClick="onClickDes"
        android:text="@string/des" />

    <Button
        android:id="@+id/buttonPop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonSpice"
        android:layout_alignRight="@+id/buttonSpice"
        android:layout_below="@+id/buttonSpice"
        android:layout_marginTop="36dp"
        android:onClick="OnClickPop"
        android:text="@string/pop" />

</RelativeLayout>
